# pylab

./: .gitignore  .gitmodules  .latexmkrc  README.md  pyproject.toml  pyrigol.py  requirements.txt
Rigol1000z/: __init__.py  commands.py  rigol1000z.py  rigol1000zcommandmenu.py
src/pylab/: __main__.py  cli.py
src/pylab/commands/: oszi.py  pipeline.py
src/pylab/core/: oscilloscope.py  pipeline_processor.py
src/pylab/implementations/: oszi.py  pipeline.py
src/pylab/utils/: helpers.py
